--- a/FriSpolocnostSemPraca.vcxproj.filters
+++ b/FriSpolocnostSemPraca.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="Vozidlo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Zakaznik.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ds_routines.cpp">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Vozidlo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Zakaznik.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
